--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+p,
+span,
+strong {
+  font-size: 1.25rem;
+}
+
+button {
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+
+small {
+  font-size: 0.625rem;
+}
+
+@layer utilities {
+  .clip-around {
+    clip-path: inset(0 -100vmax);
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  .not-clip-square {
+    clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+  }
 }
