--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,13 @@ button {
   box-sizing: border-box;
 }
 
+*::-webkit-scrollbar {
+  display: none;
+}
+html {
+  cursor: wait;
+}
+
 h1 {
   font-size: 4rem;
 }
@@ -64,6 +71,7 @@ html.has-scroll-dragging {
 
 .c-scrollbar {
   position: absolute;
+  pointer-events: none;
   right: 0;
   top: 0;
   width: 11px;
