--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,22 @@
 @tailwind base;
 @tailwind components;
 
+:root {
+  --section-padding: 9vw;
+  --gap-padding: 1.75vw;
+  --container-padding: 3vw;
+  
+  --content-width: 1200px;
+}
+
+@media (width <= 768px) {
+  :root {
+    --section-padding: 2rem;
+    --gap-padding: 0.5rem;
+    --container-padding: 1rem;
+  }
+}
+
 button {
   font-size: 1.25rem;
   font-weight: 700;
@@ -15,26 +31,9 @@ button {
 *::-webkit-scrollbar {
   display: none;
 }
+
 html {
   cursor: wait;
-}
-
-h1 {
-  font-size: 4rem;
-}
-
-h2 {
-  font-size: 3rem;
-}
-
-p,
-span,
-strong {
-  font-size: 1.25rem;
-}
-
-small {
-  font-size: 0.625rem;
 }
 
 html.has-scroll-smooth {
