feat: PerformanceMonitor on /home scene

--- a/src/app/styles/typography.css
+++ b/src/app/styles/typography.css
@@ -7,9 +7,17 @@ h1 {
   transition: font-size 300ms;
 }
 
+small {
+  font-size: clamp(0.6875rem, 1.3vw, 1rem);
+}
+
 @media (width <= 768px) {
   h1 {
     font-size: clamp(2.5rem, 5.5vw, 7rem);
+  }
+
+  small {
+    font-size: 0.5625rem;
   }
 }
 
@@ -25,10 +33,6 @@ h5 {
   text-transform: uppercase;
   font-size: 1rem;
   color: #aaa;
-}
-
-small {
-  font-size: clamp(0.6875rem, 1.3vw, 1rem);
 }
 
 h2 {
