--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -9,6 +9,9 @@
   --content-width: 1200px;
 
   --primary-color: #050505;
+
+  --text-heading: clamp(1.25rem, 5.5vw, 5rem);
+  --text-body: max(1rem, 1.125vw);
 }
 
 @media (width <= 768px) {
@@ -16,6 +19,8 @@
     --section-padding: 1rem;
     --gap-padding: 0.5rem;
     --container-padding: 1rem;
+
+    --text-heading: clamp(2.25rem, 5.5vw, 7rem);
   }
 }
 
