--- a/src/app/styles/typography.css
+++ b/src/app/styles/typography.css
@@ -6,7 +6,7 @@ h1 {
   font-family: var(--font-syne);
   letter-spacing: calc(var(--text-heading) * -0.08);
   white-space: normal;
-  line-height: 80%;
+  line-height: 70%;
   text-transform: uppercase;
 }
 
@@ -18,6 +18,7 @@ h2 {
 h3 {
   font-size: calc(var(--text-heading) * 0.48);
   letter-spacing: calc(var(--text-heading) * 0.48 * -0.085);
+  font-family: var(--font-roboto);
   font-weight: 400;
 }
 
@@ -58,7 +59,7 @@ span {
 @media (width <= 768px) {
   small,
   strong {
-    font-size: calc(var(--text-body) * 0.69);
+    font-size: calc(var(--text-body) * 0.695);
   }
 
   p,
