--- a/src/app/styles/typography.css
+++ b/src/app/styles/typography.css
@@ -31,6 +31,10 @@ h5 {
 }
 
 @media (width <= 768px) {
+  h1 {
+    font-size: calc(var(--text-heading) * 0.66)
+  }
+
   h5 {
     font-size: calc(var(--text-heading) * 0.44);
   }
