--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -9,6 +9,9 @@
   --content-width: 1200px;
 
   --primary-color: #050505;
+  --text-color: rgb(230, 230, 230);
+  --text-color-gray: #777;
+  --text-color-light: #fff;
 
   --text-heading: clamp(1.25rem, 5.5vw, 5rem);
   --text-body: max(1rem, 1.125vw);
@@ -20,7 +23,7 @@
     --gap-padding: 0.5rem;
     --container-padding: 1rem;
 
-    --text-heading: clamp(2.25rem, 5.5vw, 7rem);
+    --text-heading: clamp(2.275rem, 5.5vw, 7rem);
   }
 }
 
@@ -35,12 +38,21 @@ button {
   box-sizing: border-box;
 }
 
+*::selection {
+  background-color: #188bfec4;
+  color: var(--text-color-light);
+}
+
 *::-webkit-scrollbar {
   display: none;
 }
 
 html {
   background-color: var(---primary-color);
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
 }
 
 html.lenis {
@@ -75,10 +87,10 @@ html.lenis {
 
 @keyframes spinOrganicFluid {
   from {
-    transform: translate(50%, -50%) rotateZ(0deg) scale(.5);
+    transform: translate(50%, -50%) rotateZ(0deg) scale(0.5);
   }
 
   to {
-    transform: translate(50%, -50%) rotateZ(360deg) scale(.5);
+    transform: translate(50%, -50%) rotateZ(360deg) scale(0.5);
   }
 }
